--- a/index.html
+++ b/index.html
@@ -18,9 +18,18 @@
 
     <header class="header">
       <div class="container header__cointainer">
-          <a class="logo logo--header" href="./index.html"><span class="logo__web">Web</span><span
-                  class="logo__studio">Studio</span></a>
-          <nav class="header__nav">
+        <div class="header__block-mobile">
+        <a class="logo logo--header" href="./index.html"><span class="logo__web">Web</span><span
+          class="logo__studio">Studio</span></a>
+    <button type="button" class="menu-button is-open js-open-menu" aria-expanded="false">
+      <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+        <use class="icon-menu" href="./images/symbol-defs.svg#icon-menu_mob"></use>
+        <use class="icon-close" href="./images/symbol-defs.svg#icon-close_mob"></use>
+      </svg>
+    </button>
+  </div>
+  <div class="header__mob--menu">
+        <nav class="header__nav">
               <ul class="list header__nav-block">
                   <li class="header__item"><a class="header__link header__studio" href="./index.html">Студия</a></li>
                   <li class="header__item"><a class="header__link" href="./portfolio.html">Портфолио</a></li>
@@ -29,17 +38,18 @@
           </nav>
           <ul class="list header__contact">
               <li class="header__mail"><a class="header__link header__link--contakt" href="mailto:info@devstudio.com">
-                      <svg class="header__icon">
+                      <svg width="14" height="10"  class="header__icon">
                           <use href="./images/symbol-defs.svg#icon-envelope"></use>
                       </svg>info@devstudio.com</a>
               </li>
               <li class="heder__tel"><a class="header__link header__link--contakt" href="tel:+380961111111">
-                      <svg class="header__icon">
+                      <svg width="10" height="14" class="header__icon">
                           <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                       </svg>+38 096 111 11 11</a>
               </li>
           </ul>
-      </div>
+        </div>
+        </div>
   </header>
   <main>
 
@@ -499,5 +509,6 @@
     <!-- javascript -->
 
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
