--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </svg>
     </button>
   </div>
-  <div class="header__mob--menu">
+  <div class="header__mob--menu is-open">
         <nav class="header__nav">
               <ul class="list header__nav-block">
                   <li class="header__item"><a class="header__link header__studio" href="./index.html">Студия</a></li>
