--- a/index.html
+++ b/index.html
@@ -73,22 +73,22 @@
       <section class="section positive-features">
         <div class="container positive-features__icon">
           <div class="positive-features__fon">
-            <svg class="positive-features__svg">
+            <svg class="positive-features__svg" width="70" height="70">
               <use href="./images/symbol-defs.svg#icon-antenna"></use>
             </svg>
           </div>
           <div class="positive-features__fon">
-            <svg class="positive-features__svg">
+            <svg class="positive-features__svg" width="70" height="70">
               <use href="./images/symbol-defs.svg#icon-clock"></use>
             </svg>
           </div>
           <div class="positive-features__fon">
-            <svg class="positive-features__svg">
+            <svg class="positive-features__svg" width="70" height="70">
               <use href="./images/symbol-defs.svg#icon-diagram"></use>
             </svg>
           </div>
           <div class="positive-features__fon">
-            <svg class="positive-features__svg">
+            <svg class="positive-features__svg" width="70" height="70">
               <use href="./images/symbol-defs.svg#icon-cosmo"></use>
             </svg>
           </div>
@@ -167,21 +167,21 @@
                 <ul class="list social__network">
                   <li class="social__block">
                     <a class="social__link" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
-                      <svg class="social__svg">
+                      <svg class="social__svg" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__block">
                     <a class="social__link" href="https://twitter.com/" rel="noopener noreferrer" target="_blank">
-                      <svg class="social__svg">
+                      <svg class="social__svg" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__block">
                     <a class="social__link" href="https://www.facebook.com/" rel="noopener noreferrer" target="_blank">
-                      <svg class="social__svg">
+                      <svg class="social__svg" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-facebook">
                         </use>
                       </svg>
@@ -189,7 +189,7 @@
                   </li>
                   <li class="social__block">
                     <a class="social__link" href="https://linkedin.com/" rel="noopener noreferrer" target="_blank">
-                      <svg class="social__svg">
+                      <svg class="social__svg" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-linkedin">
                         </use>
                       </svg>
@@ -208,7 +208,7 @@
                 <ul class="list social__network">
                   <li class="social__block">
                     <a class="social__link" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
-                      <svg class="social__svg">
+                      <svg class="social__svg" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-instagram">
                         </use>
                       </svg>
@@ -216,14 +216,14 @@
                   </li>
                   <li class="social__block">
                     <a class="social__link" href="https://twitter.com/" rel="noopener noreferrer" target="_blank">
-                      <svg class="social__svg">
+                      <svg class="social__svg" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__block">
                     <a class="social__link" href="https://www.facebook.com/" rel="noopener noreferrer" target="_blank">
-                      <svg class="social__svg">
+                      <svg class="social__svg" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-facebook"> 
                         </use>
                       </svg>
@@ -231,7 +231,7 @@
                   </li>
                   <li class="social__block">
                     <a class="social__link" href="https://linkedin.com/" rel="noopener noreferrer" target="_blank">
-                      <svg class="social__svg">
+                      <svg class="social__svg" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-linkedin">
                         </use>
                       </svg>
@@ -250,7 +250,7 @@
                 <ul class="list social__network">
                   <li class="social__block">
                     <a class="social__link" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
-                      <svg class="social__svg">
+                      <svg class="social__svg" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-instagram">
                         </use>
                       </svg>
@@ -258,7 +258,7 @@
                   </li>
                   <li class="social__block">
                     <a class="social__link" href="https://twitter.com/" rel="noopener noreferrer" target="_blank">
-                      <svg class="social__svg">
+                      <svg class="social__svg" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter">
                         </use>
                       </svg>
@@ -266,7 +266,7 @@
                   </li>
                   <li class="social__block">
                     <a class="social__link" href="https://www.facebook.com/" rel="noopener noreferrer" target="_blank">
-                      <svg class="social__svg">
+                      <svg class="social__svg" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-facebook">
                         </use>
                       </svg>
@@ -274,7 +274,7 @@
                   </li>
                   <li class="social__block">
                     <a class="social__link" href="https://linkedin.com/" rel="noopener noreferrer" target="_blank">
-                      <svg class="social__svg">
+                      <svg class="social__svg" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-linkedin">
                         </use>
                       </svg>
@@ -293,7 +293,7 @@
                 <ul class="list social__network">
                   <li class="social__block">
                     <a class="social__link" href="https://www.instagram.com/" rel="noopener noreferrer" target >
-                      <svg class="social__svg">
+                      <svg class="social__svg" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-instagram">
                         </use>
                       </svg>
@@ -301,14 +301,14 @@
                   </li>
                   <li class="social__block">
                     <a class="social__link" href="https://twitter.com/" rel="noopener noreferrer" target="_blank">
-                      <svg class="social__svg">
+                      <svg class="social__svg" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__block">
                     <a class="social__link" href="https://www.facebook.com/" rel="noopener noreferrer" target="_blank">
-                      <svg class="social__svg">
+                      <svg class="social__svg" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-facebook">
                         </use>
                       </svg>
@@ -316,7 +316,7 @@
                   </li>
                   <li class="social__block">
                     <a class="social__link" href="https://linkedin.com/" rel="noopener noreferrer" target="_blank">
-                      <svg class="social__svg">
+                      <svg class="social__svg" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-linkedin">
                         </use>
                       </svg>
@@ -337,42 +337,42 @@
           <ul class="list client__block">
             <li class="client__item">
               <a class="client__link" href="">
-                <svg class="client__icon">
+                <svg class="client__icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-Logo1"></use>
                 </svg>
               </a>
             </li>
             <li class="client__item">
               <a class="client__link" href="">
-                <svg class="client__icon">
+                <svg class="client__icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-Logo2"></use>
                 </svg>
               </a>
             </li>
             <li class="client__item">
               <a class="client__link" href="">
-                <svg class="client__icon">
+                <svg class="client__icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-Logo3"></use>
                 </svg>
               </a>
             </li>
             <li class="client__item">
               <a class="client__link" href="">
-                <svg class="client__icon">
+                <svg class="client__icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-Logo4"></use>
                 </svg>
               </a>
             </li>
             <li class="client__item">
               <a class="client__link" href="">
-                <svg class="client__icon">
+                <svg class="client__icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-Logo5"></use>
                 </svg>
               </a>
             </li>
             <li class="client__item">
               <a class="client__link" href="">
-                <svg class="client__icon">
+                <svg class="client__icon" width="106" height="60">
                   <use href="./images/symbol-defs.svg#icon-Logo6"></use>
                 </svg>
               </a>
@@ -403,28 +403,28 @@
                       <ul class="list social__network">
                           <li class="social-network__items">
                               <a class="social-network__link"href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
-                              <svg class="social-network__icon">
+                              <svg class="social-network__icon" width="20" height="20">
                               <use href="./images/symbol-defs.svg#icon-instagram"></use>
                               </svg>
                           </a>
                           </li>
                           <li class="social-network__items">
                               <a class="social-network__link" href="https://twitter.com/" rel="noopener noreferrer" target="_blank">
-                              <svg class="social-network__icon">
+                              <svg class="social-network__icon" width="20" height="20">
                               <use href="./images/symbol-defs.svg#icon-twitter"></use>
                               </svg>
                               </a>
                           </li>
                           <li class="social-network__items">
                               <a class="social-network__link" href="https://www.facebook.com/" rel="noopener noreferrer" target="_blank">
-                              <svg class="social-network__icon">
+                              <svg class="social-network__icon" width="20" height="20">
                               <use href="./images/symbol-defs.svg#icon-facebook"></use>
                               </svg>
                               </a>
                           </li>
                           <li class="social-network__items">
                               <a class="social-network__link" href="https://linkedin.com/" rel="noopener noreferrer" target="_blank">
-                              <svg class="social-network__icon">
+                              <svg class="social-network__icon" width="20" height="20">
                               <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                               </svg>
                               </a>
@@ -438,7 +438,7 @@
                   </label>
                   <button type="submit" class="footer__button">
                       <p class="footer__text-button">Подписаться</p>
-                      <svg class="footer__button-icon">
+                      <svg class="footer__button-icon" width="24" height="24">
                       <use href="./images/symbol-defs.svg#icon-telegram"></use>
                       </svg>
                   </button>
@@ -451,7 +451,7 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="button-modal" data-modal-close>
-          <svg class="backdrop__svg">
+          <svg class="backdrop__svg" width="18" height="18">
             <use href="./images/symbol-defs.svg#icon-close-black">
             </use>
           </svg>
@@ -463,7 +463,7 @@
         <label class="form__label">
           <p class="form__name">Имя</p>
           <input class="form__input" type="text" name="Username" />
-          <svg class="form__svg">
+          <svg class="form__svg" width="18" height="18">
             <use href="./images/symbol-defs.svg#icon-person-form"></use>
           </svg>
         </label>
@@ -472,7 +472,7 @@
         <label class="form__label">
           <p class="form__name">Телефон</p>
           <input class="form__input" type="tel" name="tel" />
-          <svg class="form__svg">
+          <svg class="form__svg" width="18" height="18">
             <use href="./images/symbol-defs.svg#icon-phone-form"></use>
           </svg>
         </label>
@@ -481,7 +481,7 @@
         <label class="form__label">
           <p class="form__name">Email</p>
           <input class="form__input" type="email" name="email" />
-          <svg class="form__svg">
+          <svg class="form__svg" width="18" height="18">
             <use href="./images/symbol-defs.svg#icon-email-form"></use>
           </svg>
         </label>
