DZ 8 header mob

--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,7 @@
                 </div>
             <div class="project__text">
                     <h3 class="project__name">Технокряк</h3>
-                    <p3 class="project__description">Веб-сайт</p3>
+                    <p class="project__description">Веб-сайт</p>
             </div>
                 </a>
             </li>
@@ -215,7 +215,7 @@
                 <p class="footer__slogan">ПРИСОЕДИНЯЙТЕСЬ</p>
                     <ul class="list social-network">
                         <li class="social-network__items">
-                            <a class="social-network__link"href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
+                            <a class="social-network__link" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
                             <svg class="social-network__icon">
                             <use href="./images/symbol-defs.svg#icon-instagram"></use>
                             </svg>
@@ -244,13 +244,13 @@
                         </li>
                     </ul>
                     </div>
-            <form action="" class="footer__form">
+            <form class="footer__form">
                 <label class="footer__label">
-                    <p class="footer__slogan">ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
+                    <span class="footer__slogan">ПОДПИШИТЕСЬ НА РАССЫЛКУ</span>
                     <input class="footer__email" type="email" name="email-footer" placeholder="E-mail" />
                 </label>
                 <button type="submit" class="footer__button">
-                    <p class="footer__text-button">Подписаться</p>
+                    <span class="footer__text-button">Подписаться</span>
                     <svg class="footer__button-icon">
                     <use href="./images/symbol-defs.svg#icon-telegram"></use>
                     </svg>
@@ -258,8 +258,7 @@
             </form>
     </div>
 </footer>
+
     </body>
     
-    </html>
-</body>
 </html>
