--- a/index.html
+++ b/index.html
@@ -21,14 +21,18 @@
         <div class="header__block-mobile">
         <a class="logo logo--header" href="./index.html"><span class="logo__web">Web</span><span
           class="logo__studio">Studio</span></a>
-    <button type="button" class="menu-button is-open js-open-menu" aria-expanded="false">
+    <button type="button" class="menu-button  js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
       <svg width="40" height="40" aria-label="Переключатель мобильного меню">
         <use class="icon-menu" href="./images/symbol-defs.svg#icon-menu_mob"></use>
-        <use class="icon-close" href="./images/symbol-defs.svg#icon-close_mob"></use>
       </svg>
     </button>
   </div>
-  <div class="header__mob--menu is-open">
+  <div class="header__mob--menu  js-menu-container" id="mobile-menu">
+    <button type="button" class="menu-button--close  js-close-menu">
+    <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+      <use class="icon-close" href="./images/symbol-defs.svg#icon-close_mob"></use>
+    </svg>
+  </button>
         <nav class="header__nav">
               <ul class="list header__nav-block">
                   <li class="header__item"><a class="header__link header__studio" href="./index.html">Студия</a></li>
@@ -42,16 +46,23 @@
                           <use href="./images/symbol-defs.svg#icon-envelope"></use>
                       </svg>info@devstudio.com</a>
               </li>
-              <li class="heder__tel"><a class="header__link header__link--contakt" href="tel:+380961111111">
+              <li class="heder__tel"><a class="header__link header__link--contakt header__link--contakt-tel" href="tel:+380961111111">
                       <svg width="10" height="14" class="header__icon">
                           <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                       </svg>+38 096 111 11 11</a>
               </li>
-          </ul>
+            </ul>
+              <div class="menu-social">
+                <ul class="menu-social__network">
+                <li><a href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">instagram</a></li>
+                <li><a href="https://twitter.com/" rel="noopener noreferrer" target="_blank">twitter</a></li>
+                <li><a href="https://www.facebook.com/" rel="noopener noreferrer" target="_blank">facebook</a></li>
+                <li><a href="https://linkedin.com/" rel="noopener noreferrer" target="_blank">linkedin</a></li>
+              </ul>
+              </div>
         </div>
         </div>
   </header>
-  <main>
 
     <main>
       <!-- Секция ГЕРОЙ -->
@@ -71,32 +82,14 @@
       <!-- Секция ПОЛОЖИТЕЛЬНЫЕ КАЧЕСТВА -->
 
       <section class="section positive-features">
-        <div class="container positive-features__icon">
-          <div class="positive-features__fon">
-            <svg class="positive-features__svg" width="70" height="70">
-              <use href="./images/symbol-defs.svg#icon-antenna"></use>
-            </svg>
-          </div>
-          <div class="positive-features__fon">
-            <svg class="positive-features__svg" width="70" height="70">
-              <use href="./images/symbol-defs.svg#icon-clock"></use>
-            </svg>
-          </div>
-          <div class="positive-features__fon">
-            <svg class="positive-features__svg" width="70" height="70">
-              <use href="./images/symbol-defs.svg#icon-diagram"></use>
-            </svg>
-          </div>
-          <div class="positive-features__fon">
-            <svg class="positive-features__svg" width="70" height="70">
-              <use href="./images/symbol-defs.svg#icon-cosmo"></use>
-            </svg>
-          </div>
-        </div>
         <div class="container positive-features">
-          <h2 class="text__transporent">Положительные качества</h2>
           <ul class="list positive-features__item">
             <li class="positive-features__paragraph">
+              <div class="positive-features__fon">
+                <svg class="positive-features__svg" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="positive-features__title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
               <p class="positive-features__text">
                 Идейные соображения, а также начало повседневной работы по
@@ -104,6 +97,11 @@
               </p>
             </li>
             <li class="positive-features__paragraph">
+              <div class="positive-features__fon">
+                <svg class="positive-features__svg" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="positive-features__title">ПУНКТУАЛЬНОСТЬ</h3>
               <p class="positive-features__text">
                 Задача организации, в особенности же рамки и место обучения
@@ -111,6 +109,11 @@
               </p>
             </li>
             <li class="positive-features__paragraph">
+              <div class="positive-features__fon">
+                <svg class="positive-features__svg" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="positive-features__title">ПЛАНИРОВАНИЕ</h3>
               <p class="positive-features__text">
                 Равным образом консультация с широким активом в значительной
@@ -118,6 +121,11 @@
               </p>
             </li>
             <li class="positive-features__paragraph">
+              <div class="positive-features__fon">
+                <svg class="positive-features__svg" width="70" height="70">
+                  <use href="./images/symbol-defs.svg#icon-cosmo"></use>
+                </svg>
+              </div>
               <h3 class="positive-features__title">СОВРЕМЕННЫЕ ТЕХНОЛОГИЙ</h3>
               <p class="positive-features__text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -292,7 +300,7 @@
               <div class="social">
                 <ul class="list social__network">
                   <li class="social__block">
-                    <a class="social__link" href="https://www.instagram.com/" rel="noopener noreferrer" target >
+                    <a class="social__link" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank" >
                       <svg class="social__svg" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-instagram">
                         </use>
@@ -402,7 +410,7 @@
                   <p class="footer__slogan">ПРИСОЕДИНЯЙТЕСЬ</p>
                       <ul class="list social__network">
                           <li class="social-network__items">
-                              <a class="social-network__link"href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
+                              <a class="social-network__link" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">
                               <svg class="social-network__icon" width="20" height="20">
                               <use href="./images/symbol-defs.svg#icon-instagram"></use>
                               </svg>
@@ -431,13 +439,13 @@
                           </li>
                       </ul>
                       </div>
-              <form action="" class="footer__form">
-                  <label class="footer__label">
-                      <p class="footer__slogan">ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
+              <form class="footer__form">
+                  <label class="footer__label" >
+                      <span class="footer__slogan">ПОДПИШИТЕСЬ НА РАССЫЛКУ</span>
                       <input class="footer__email" type="email" name="email-footer" placeholder="E-mail" />
                   </label>
-                  <button type="submit" class="footer__button">
-                      <p class="footer__text-button">Подписаться</p>
+                  <button type="submit" class="footer__button footer__text-button">
+                      Подписаться
                       <svg class="footer__button-icon" width="24" height="24">
                       <use href="./images/symbol-defs.svg#icon-telegram"></use>
                       </svg>
@@ -461,7 +469,7 @@
         <ul class="list">
           <li>
         <label class="form__label">
-          <p class="form__name">Имя</p>
+          <span class="form__name">Имя</span>
           <input class="form__input" type="text" name="Username" />
           <svg class="form__svg" width="18" height="18">
             <use href="./images/symbol-defs.svg#icon-person-form"></use>
@@ -470,7 +478,7 @@
       </li>
       <li>
         <label class="form__label">
-          <p class="form__name">Телефон</p>
+          <span class="form__name">Телефон</span>
           <input class="form__input" type="tel" name="tel" />
           <svg class="form__svg" width="18" height="18">
             <use href="./images/symbol-defs.svg#icon-phone-form"></use>
@@ -479,7 +487,7 @@
       </li>
       <li>
         <label class="form__label">
-          <p class="form__name">Email</p>
+          <span class="form__name">Email</span>
           <input class="form__input" type="email" name="email" />
           <svg class="form__svg" width="18" height="18">
             <use href="./images/symbol-defs.svg#icon-email-form"></use>
@@ -488,15 +496,15 @@
       </li>
       <li>
         <label class="form__label">
-          <p class="form__name">Комментарий</p>
-          <textarea type="text" placeholder="Введите текст" class="form__textarea" name="feedback" ></textarea>
+          <span class="form__name">Комментарий</span>
+          <textarea  placeholder="Введите текст" class="form__textarea" name="feedback" ></textarea>
         </label>
       </li>
       </ul>
       <label class="checkbox">
         <input class="checkbox__imput" type="checkbox" name="agreement-checkbox" />
         <span class="checkbox__icon"></span>
-        <p class="checkbox__text">Соглашаюсь с рассылкой и принимаю<a class="checkbox__agreement" href="">Условия договора</a></p>
+        <span class="checkbox__text">Соглашаюсь с рассылкой и принимаю<a class="checkbox__agreement" href="">Условия договора</a></span>
       </label>
 
       <button class="form__button" type="submit">Отправить</button>
@@ -510,5 +518,6 @@
 
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
+
   </body>
 </html>
