--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                   <li class="header__item"><a class="header__link" href="">Контакты</a></li>
               </ul>
           </nav>
+          <div class="header__mob-menu">
           <ul class="list header__contact">
               <li class="header__mail"><a class="header__link header__link--contakt" href="mailto:info@devstudio.com">
                       <svg width="14" height="10"  class="header__icon">
@@ -53,13 +54,14 @@
               </li>
             </ul>
               <div class="menu-social">
-                <ul class="menu-social__network">
-                <li><a href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">instagram</a></li>
-                <li><a href="https://twitter.com/" rel="noopener noreferrer" target="_blank">twitter</a></li>
-                <li><a href="https://www.facebook.com/" rel="noopener noreferrer" target="_blank">facebook</a></li>
-                <li><a href="https://linkedin.com/" rel="noopener noreferrer" target="_blank">linkedin</a></li>
+                <ul class="list menu-social__network">
+                <li class="menu-social__item"><a class="menu-social__link menu-social__link--first" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">instagram</a></li>
+                <li class="menu-social__item"><a class="menu-social__link" href="https://twitter.com/" rel="noopener noreferrer" target="_blank">twitter</a></li>
+                <li class="menu-social__item"><a class="menu-social__link" href="https://www.facebook.com/" rel="noopener noreferrer" target="_blank">facebook</a></li>
+                <li class="menu-social__item"><a class="menu-social__link menu-social__link--last" href="https://linkedin.com/" rel="noopener noreferrer" target="_blank">linkedin</a></li>
               </ul>
               </div>
+            </div>
         </div>
         </div>
   </header>
@@ -138,7 +140,7 @@
 
       <!-- Cекция чем мы занимаемся -->
 
-      <section class="section">
+      <section class="section work__sectiom">
         <div class="container work">
           <h2 class="work__name">Чем мы занимаемся</h2>
           <ul class="list work__box">
