--- a/portfolio.html
+++ b/portfolio.html
@@ -14,10 +14,23 @@
 
                 <!-- Секция header -->
 
-    <header class="header">
-        <div class="container header__cointainer">
+<header class="header">
+    <div class="container header__cointainer">
+        <div class="header__block-mobile">
             <a class="logo logo--header" href="./index.html"><span class="logo__web">Web</span><span
-                    class="logo__studio">Studio</span></a>
+                class="logo__studio">Studio</span></a>
+        <button type="button" class="menu-button  js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+        <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+        <use class="icon-menu" href="./images/symbol-defs.svg#icon-menu_mob"></use>
+        </svg>
+        </button>
+        </div>
+        <div class="header__mob--menu  js-menu-container" id="mobile-menu">
+        <button type="button" class="menu-button--close  js-close-menu">
+        <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+        <use class="icon-close" href="./images/symbol-defs.svg#icon-close_mob"></use>
+        </svg>
+        </button>
             <nav class="header__nav">
                 <ul class="list header__nav-block">
                     <li class="header__item"><a class="header__link" href="./index.html">Студия</a></li>
@@ -25,20 +38,32 @@
                     <li class="header__item"><a class="header__link" href="">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="list header__contact">
-                <li class="header__mail"><a class="header__link header__link--contakt" href="mailto:info@devstudio.com">
-                        <svg class="header__icon">
-                            <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                <div class="header__mob-menu">
+                    <ul class="list header__contact">
+                        <li class="header__mail"><a class="header__link header__link--contakt" href="mailto:info@devstudio.com">
+                        <svg width="14" height="10"  class="header__icon">
+                        <use href="./images/symbol-defs.svg#icon-envelope"></use>
                         </svg>info@devstudio.com</a>
-                </li>
-                <li class="heder__tel"><a class="header__link header__link--contakt" href="tel:+380961111111">
-                        <svg class="header__icon">
-                            <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                        </li>
+                        <li class="heder__tel"><a class="header__link header__link--contakt header__link--contakt-tel" href="tel:+380961111111">
+                        <svg width="10" height="14" class="header__icon">
+                        <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                         </svg>+38 096 111 11 11</a>
-                </li>
-            </ul>
+                        </li>
+                    </ul>
+                <div class="menu-social">
+                    <ul class="list menu-social__network">
+                        <li class="menu-social__item"><a class="menu-social__link menu-social__link--first" href="https://www.instagram.com/" rel="noopener noreferrer" target="_blank">instagram</a></li>
+                        <li class="menu-social__item"><a class="menu-social__link" href="https://twitter.com/" rel="noopener noreferrer" target="_blank">twitter</a></li>
+                        <li class="menu-social__item"><a class="menu-social__link" href="https://www.facebook.com/" rel="noopener noreferrer" target="_blank">facebook</a></li>
+                        <li class="menu-social__item"><a class="menu-social__link menu-social__link--last" href="https://linkedin.com/" rel="noopener noreferrer" target="_blank">linkedin</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-    </header>
+    </div>
+</header>
+
     <main>
 
                 <!-- Секция центральная -->
@@ -258,6 +283,8 @@
             </form>
     </div>
 </footer>
+
+<script src="./js/mobile-menu.js"></script>
 
     </body>
     
