--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <h2 class="team__development">Наша команда</h2>
           <ul class="list team__block">
             <li class="team__foto">
-              <img src="images/teamcard1.jpg" width="270" alt="фотография сотрудника"/>
+              <img class="team__img" src="images/teamcard1.jpg" width="270" alt="фотография сотрудника"/>
               <div class="team__text">
                 <p class="team__name">Игорь Демьяненко</p>
                 <p class="team__position">Product Designer</p>
@@ -209,7 +209,7 @@
               </div>
             </li>
             <li class="team__foto">
-              <img src="images/teamcard2.jpg" width="270" alt="фотография сотрудника"/>
+              <img class="team__img" src="images/teamcard2.jpg" width="270" alt="фотография сотрудника"/>
               <div class="team__text">
                 <p class="team__name">Ольга Репина</p>
                 <p class="team__position">Frontend Developer</p>
@@ -251,7 +251,7 @@
               </div>
             </li>
             <li class="team__foto">
-              <img src="images/teamcard3.jpg" width="270" alt="фотография сотрудника"/>
+              <img class="team__img" src="images/teamcard3.jpg" width="270" alt="фотография сотрудника"/>
               <div class="team__text">
                 <p class="team__name">Николай Тарасов</p>
                 <p class="team__position">Marketing</p>
@@ -294,7 +294,7 @@
               </div>
             </li>
             <li class="team__foto">
-              <img src="images/teamcard4.jpg" width="270" alt="фотография"/>
+              <img class="team__img" src="images/teamcard4.jpg" width="270" alt="фотография"/>
               <div class="team__text">
                 <p class="team__name">Михаил Ермаков</p>
                 <p class="team__position">UI Designer</p>
