--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
             <li class="project__item"> 
                 <a class="project__link" href="">
                     <div class="portfolio-img">  
-                    <img class="portfolio-img__icon" src="images/portfolio-img1.jpg" width="370" alt="Ноутбук, на котором открыт фото сотрудников">
+                    <img class="portfolio-img__icon" src="images/portfolio-img1.jpg" alt="Ноутбук, на котором открыт фото сотрудников">
                 <p class="portfolio-img__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
@@ -106,7 +106,7 @@
             <li class="project__item">
                 <a class="project__link" href="">
                     <div class="portfolio-img"> 
-                    <img class="portfolio-img__icon" src="images/portfolio-img2.jpg" width="370" alt="Постер двое играют в баскетбол">
+                    <img class="portfolio-img__icon" src="images/portfolio-img2.jpg" alt="Постер двое играют в баскетбол">
                 <p class="portfolio-img__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
@@ -120,7 +120,7 @@
             <li class="project__item">
                 <a class="project__link" href="">
                     <div class="portfolio-img"> 
-                    <img class="portfolio-img__icon" src="images/portfolio-img3.jpg" width="370" alt="Эмблема в виде звезды, ресторана морская еда">
+                    <img class="portfolio-img__icon" src="images/portfolio-img3.jpg" alt="Эмблема в виде звезды, ресторана морская еда">
                 <p class="portfolio-img__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
@@ -134,7 +134,7 @@
             <li class="project__item">
                 <a class="project__link" href="">
                     <div class="portfolio-img">
-                <img class="portfolio-img__icon" src="images/portfolio-img4.jpg" width="370" alt="Наушники">
+                <img class="portfolio-img__icon" src="images/portfolio-img4.jpg" alt="Наушники">
                 <p class="portfolio-img__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
@@ -148,7 +148,7 @@
             <li class="project__item"> 
                 <a class="project__link" href="">
                     <div class="portfolio-img">    
-                <img class="portfolio-img__icon" src="images/portfolio-img5.jpg" width="370" alt="Две стопки бумажек для заметок">
+                <img class="portfolio-img__icon" src="images/portfolio-img5.jpg" alt="Две стопки бумажек для заметок">
                 <p class="portfolio-img__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
@@ -162,7 +162,7 @@
             <li class="project__item">
                 <a class="project__link" href="">
                     <div class="portfolio-img"> 
-                <img class="portfolio-img__icon" src="images/portfolio-img6.jpg" width="370" alt="Монитор aplle">
+                <img class="portfolio-img__icon" src="images/portfolio-img6.jpg" alt="Монитор aplle">
                 <p class="portfolio-img__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
@@ -176,7 +176,7 @@
             <li class="project__item"> 
                 <a class="project__link" href="">
                     <div class="portfolio-img">
-                <img class="portfolio-img__icon" src="images/portfolio-img7.jpg" width="370" alt="открытая книга, лимитированого тиража">
+                <img class="portfolio-img__icon" src="images/portfolio-img7.jpg" alt="открытая книга, лимитированого тиража">
                 <p class="portfolio-img__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
@@ -190,7 +190,7 @@
             <li class="project__item">
                 <a class="project__link" href="">
                     <div class="portfolio-img">
-                <img class="portfolio-img__icon" src="images/portfolio-img8.jpg" width="370" alt="Бирка LAB">
+                <img class="portfolio-img__icon" src="images/portfolio-img8.jpg" alt="Бирка LAB">
                 <p class="portfolio-img__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
@@ -204,7 +204,7 @@
             <li class="project__item">
                 <a class="project__link" href="">
                     <div class="portfolio-img">
-                <img class="portfolio-img__icon" src="images/portfolio-img9.jpg" width="370" alt="Ноутбук, и руки которые на нем печатают">
+                <img class="portfolio-img__icon" src="images/portfolio-img9.jpg" alt="Ноутбук, и руки которые на нем печатают">
                 <p class="portfolio-img__title">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
