--- a/index.html
+++ b/index.html
@@ -145,16 +145,28 @@
           <h2 class="work__name">Чем мы занимаемся</h2>
           <ul class="list work__box">
             <li class="work__item">
-              <img src="images/box1.jpg" width="370" alt="Работа за компьютером за столом"/>
+              <img srcset="
+              /images/desk-box1-370@x1-min.jpg 1x,
+              /images/desk-box1-740@x2-min.jpg 2x"
+              src="images/desk-box1-370@x1-min.jpg" width="370" 
+              alt="Работа за компьютером за столом"/>
               <p class="work__text">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</p>
             </li>
 
             <li class="work__item">
-              <img src="images/box2.jpg" width="370" alt="Телефон в руках перед компьютером"/>
+              <img srcset="
+              /images/desk-box2-370@x1-min.jpg 1x,
+              /images/desk-box2-740@x2-min.jpg 2x"
+              src="images/desk-box2-370@x1-min.jpg" width="370" 
+              alt="Телефон в руках перед компьютером"/>
               <p class="work__text">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</p>
             </li>
             <li class="work__item">
-              <img src="images/box3.jpg" width="370" alt="планшет на фоне клавиатуры, с рисунком гексограммы"/>
+              <img srcset="
+              /images/desk-box3-370@x1-min.jpg 1x,
+              /images/desk-box3-740@x2-min.jpg 2x" 
+              src="images/desk-box3-370@x1-min.jpg" width="370" 
+              alt="планшет на фоне клавиатуры, с рисунком гексограммы"/>
               <p class="work__text">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</p>
             </li>
           </ul>
@@ -168,7 +180,17 @@
           <h2 class="team__development">Наша команда</h2>
           <ul class="list team__block">
             <li class="team__foto">
-              <img class="team__img" src="images/teamcard1.jpg" width="270" alt="фотография сотрудника"/>
+              <img class="team__img" 
+              srcset="
+                  /images/team-card1-270-desk@x1-min.jpg 270w,
+                  /images/team-card1-354-tab@x1-min.jpg 354w,
+                  /images/team-card1-450-mob@x1-min.jpg 450w, 
+                  /images/team-card1-708-tab@x2-min.jpg 708w,
+                  /images/team-card1-540-desk@x2.jpg 540w,
+                  /images/team-card1-900-mob@x2-min.jpg 900w"
+              src="images/team-card1-450-mob@x1-min.jpg"
+              sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px (min-width: 480px) 450px"
+              alt="фотография сотрудника"/>
               <div class="team__text">
                 <p class="team__name">Игорь Демьяненко</p>
                 <p class="team__position">Product Designer</p>
@@ -209,7 +231,17 @@
               </div>
             </li>
             <li class="team__foto">
-              <img class="team__img" src="images/teamcard2.jpg" width="270" alt="фотография сотрудника"/>
+              <img class="team__img" 
+              srcset="
+              /images/team-card2-270-desk@x1-min.jpg 270w,
+              /images/team-card2-354-tab@x1-min.jpg 354w,
+              /images/team-card2-450-mob@x1-min.jpg 450w, 
+              /images/team-card2-708-tab@x2-min.jpg 708w,
+              /images/team-card2-540-desk@x2-min.jpg 540w,
+              /images/team-card2-900-mob@x2-min.jpg 900w"
+              src="images/team-card2-450-mob@x1-min.jpg"
+              sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px (min-width: 480px) 450px" 
+              alt="фотография сотрудника"/>
               <div class="team__text">
                 <p class="team__name">Ольга Репина</p>
                 <p class="team__position">Frontend Developer</p>
@@ -251,7 +283,17 @@
               </div>
             </li>
             <li class="team__foto">
-              <img class="team__img" src="images/teamcard3.jpg" width="270" alt="фотография сотрудника"/>
+              <img class="team__img" 
+              srcset="
+              /images/team-card3-270-desk@x1-min.jpg 270w,
+              /images/team-card3-354-tab@x1-min.jpg 354w,
+              /images/team-card3-450-mob@x1-min.jpg 450w, 
+              /images/team-card3-708-tab@x2-min.jpg 708w,
+              /images/team-card3-540-desk@x2-min.jpg 540w,
+              /images/team-card3-900-mob@x2-min.jpg 900w"
+              src="images/team-card3-450-mob@x1-min.jpg"
+              sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px (min-width: 480px) 450px"
+              alt="фотография сотрудника"/>
               <div class="team__text">
                 <p class="team__name">Николай Тарасов</p>
                 <p class="team__position">Marketing</p>
@@ -294,7 +336,17 @@
               </div>
             </li>
             <li class="team__foto">
-              <img class="team__img" src="images/teamcard4.jpg" width="270" alt="фотография"/>
+              <img class="team__img" 
+              srcset="
+              /images/team-card4-270-desk@x1-min.jpg 270w,
+              /images/team-card4-354-tab@x1-min.jpg 354w,
+              /images/team-card4-450-mob@x1-min.jpg 450w, 
+              /images/team-card4-708-tab@x2-min.jpg 708w,
+              /images/team-card4-540-desk@x2-min.jpg 540w,
+              /images/team-card4-900-mob@x2-min.jpg 900w"
+              src="images/team-card4-450-mob@x1-min.jpg"
+              sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px (min-width: 480px) 450px"
+              alt="фотография"/>
               <div class="team__text">
                 <p class="team__name">Михаил Ермаков</p>
                 <p class="team__position">UI Designer</p>
