--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
       <!-- Секция ПОЛОЖИТЕЛЬНЫЕ КАЧЕСТВА -->
 
-      <section class="section positive-features">
+      <section class="section">
         <div class="container positive-features">
           <ul class="list positive-features__item">
             <li class="positive-features__paragraph">
@@ -122,7 +122,7 @@
                 степени обуславливает.
               </p>
             </li>
-            <li class="positive-features__paragraph">
+            <li class="positive-features__paragraph positive-features__paragraph--mob">
               <div class="positive-features__fon">
                 <svg class="positive-features__svg" width="70" height="70">
                   <use href="./images/symbol-defs.svg#icon-cosmo"></use>
